# auction-crawler

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 20250301_add_auction_category.py
config/: settings.py
data/raw/: taisancong_debug.html
docs/: ARCHITECTURE.md
scripts/: run.py  test_crawl.py
src/crawlers/: base.py  dgts_moj.py  registry.py  taisancong.py
src/database/: engine.py  repository.py
src/enrichment/: area_extractor.py  classifier.py  dedup.py  geo.py
src/models/: db.py  domain.py  enums.py
src/parsers/: base.py  dgts_moj.py  taisancong.py
src/pipeline/: orchestrator.py  scheduler.py
src/storage/: raw_store.py
src/utils/: browser.py  http_client.py  logger.py
