[project]
name = "auction-crawler"
version = "0.1.0"
description = "Vietnam Auction Data Crawler Service"
requires-python = ">=3.12"
dependencies = [
    "httpx[http2]>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "apscheduler>=3.10",
    "redis>=5.0",
    "structlog>=24.1",
    "click>=8.1",
    "tenacity>=8.2",
    "python-dateutil>=2.9",
    "pyyaml>=6.0",
    "playwright>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]

[project.scripts]
auction-crawler = "scripts.run:cli"

[tool.ruff]
line-length = 120

[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.backends._legacy:_Backend"
